# fixturekit_template

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: generic_example.yaml  sg313_example.yaml
examples/: generic_smoke_test.py  sg313_smoke_test.py
fixturekit/core/: __init__.py  base.py  i2c.py  registry.py  scpi.py  spi.py  utils.py
fixturekit/drivers/: __init__.py  ads1115.py  ina219.py  korad_kd3005p.py  mcp23008_rl40002.py  mcp4151.py
fixturekit/sensors/: __init__.py  led_probe.py
scripts/: discover_i2c.py
tests/: test_math.py
